# HRMS-Lite

./: README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  db.sqlite3  pyproject.toml  requirements.txt
backend/core/: settings.py  urls.py
backend/employee/: models.py  serializers.py  urls.py  views.py
backend/employee/migrations/: 0001_initial.py
frontend/: .dockerignore  Dockerfile  package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/attendance/: page.tsx
frontend/app/employees/: page.tsx
frontend/components/: EmptyState.tsx  ErrorAlert.tsx  Loader.tsx  Navbar.tsx
frontend/lib/: api.ts  types.ts
